--- a/css/scss/sections/_contact.scss
+++ b/css/scss/sections/_contact.scss
@@ -6,17 +6,25 @@
     margin: 3rem auto 0;
 
     h2 {
-        margin: 16rem 0 0 2rem;
+        margin: 6rem 0 0 1rem;
         font-size: 3rem;
         font-family: Italiana, sans-serif;
         font-weight: 600;
+
+        @include media-breakpoint-up(md) {
+            margin-top: 8rem;
+        }
+
+        @include media-breakpoint-up(lg) {
+            margin-top: 16rem;
+        }
     }
 
     .form-container {
         z-index: 1000;
         width: 90%;
         margin: 2rem 0 0.5rem;
-        padding: 7rem 0;
+        padding: 5rem 0 2rem;
         border-top-right-radius: 45px;
 
         @include media-breakpoint-up(sm) {
@@ -25,11 +33,17 @@
 
         @include media-breakpoint-up(md) {
             width: 60%;
+            padding: 7rem 0;
         }
 
         .form {
-            width: 70%;
-            margin-left: 4rem;
+            width: 85%;
+            margin-left: 1.5rem;
+
+            @include media-breakpoint-up(md) {
+                width: 70%;
+                margin-left: 4rem;
+            }
 
             .form-label {
                 font-size: 1.2rem;
@@ -64,7 +78,7 @@
 
     .info {
         font-family: Lora, sans-serif;
-        width: 90%;
+        width: 80%;
         border-radius: 45px;
         margin: 0 auto 1rem;
         padding-bottom: 2rem;
@@ -81,10 +95,9 @@
             margin-top: 6rem;
         }
         
-
         address {
             color: $secondary;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             line-height: 1.5;
             margin: 2rem 0 2rem 2rem;
 
@@ -96,7 +109,6 @@
 
             @include media-breakpoint-up(md) {
                 margin: 4rem 0 3rem 1.5rem;
-                font-size: 1.2rem;
                 line-height: 1.4;
             }
 
@@ -111,7 +123,7 @@
 
         a {
             color: $secondary;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             line-height: 1.8;
             margin-left: 2rem;
             text-decoration: none;
@@ -122,7 +134,6 @@
 
             @include media-breakpoint-up(md) {
                 margin-left: 1.5rem;
-                font-size: 1.2rem;
                 line-height: 1.4;
             }
 
@@ -138,8 +149,13 @@
     }
 
     .image {
-        width: 80%;
-        justify-self: center;
+        @include media-breakpoint-up(md) {
+            padding-top: 1.5rem;
+        }
+
+        @include media-breakpoint-up(lg) {
+            width: 80%;
+        }
 
         img {
             width: 100%;
