--- a/css/scss/sections/_welcome.scss
+++ b/css/scss/sections/_welcome.scss
@@ -31,7 +31,7 @@
 
     .welcome-image {
         .lemon-hi {
-            margin-top: -4rem;
+            margin-top: -2rem;
             padding: 0 0 2rem;
 
             @include media-breakpoint-up(md) {
